Got the onboarding videos working, just the upload not working, also tried resolving the iOS NPS issue, hope it solved

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -510,7 +510,7 @@
   "viewPendingUpload": "View Pending Upload",
   "personalStyle": "Rediscover My Style",
   "lifeChange": "Start a New Chapter",
-  "parentMemories": "Closet for My Little One",
+  "parentMemories": "Preserve their Little Moments",
   "whyAreYouHereToday": "Why are you here today?",
   "tailorExperience": "We’ll tailor your Closet Conscious experience based on what matters to you most right now.\n\nNot sure? Pick what feels right — you can always update it later.",
   "photoAccessDialogTitle": "Give Full Access?",
@@ -538,16 +538,32 @@
   "tutorialPaidUsageAnalyticsSellUnworn": "Sell unworn clothing",
   "errorSavingTutorialProgress": "Something went wrong while saving your tutorial progress.",
   "iAmReady": "I'm ready",
-  "tutorialFreeUploadCameraTitle": "Upload Clothes with Your Camera",
-  "tutorialFreeEditCameraTitle": "Edit Items You’ve Captured",
-  "tutorialFreeCreateOutfitTitle": "Mix and Match Outfits",
-  "tutorialPaidFilterTitle": "Unlock Advanced Filters",
-  "tutorialPaidCustomizeTitle": "Customize Your Experience",
-  "tutorialPaidMultiClosetTitle": "Switch Between Multiple Closets",
-  "tutorialPaidCalendarTitle": "Plan Your Outfits with a Calendar",
-  "tutorialPaidUsageAnalyticsTitle": "Track Your Usage and Progress",
+  "tutorialFreeUploadCameraTitle": "Capture pieces, begin the story",
+  "tutorialFreeEditCameraTitle": "Shape each piece into your narrative",
+  "tutorialFreeCreateOutfitTitle": "Weave new looks from familiar threads",
+  "tutorialPaidFilterTitle": "Find what you need, when the moment calls",
+  "tutorialPaidCustomizeTitle": "Arrange your closet, your way",
+  "tutorialPaidMultiClosetTitle": "Step into a new chapter, any time",
+  "tutorialPaidCalendarTitle": "Outfit stories, one day at a time",
+  "tutorialPaidUsageAnalyticsTitle": "Trace your style, one day at a time",
   "tutorialHubTitle": "Tutorials",
   "alwaysAvailableFeatures": "Always Available Feature Tutorials",
   "premiumFeatureTutorials": "Premium Feature Tutorials",
-  "scenarioTutorials": "Scenario Tutorials"
+  "scenarioTutorials": "Scenario Tutorials",
+
+  "tutorialFreePhotoLibraryTitle": "Upload from Photo Library",
+  "tutorialClosetUploadedTitle": "Closet Upload Tutorial",
+  "tutorialScenarioTitle": "Scenario Tutorial",
+
+  "memoryTutorialFreeUploadCameraUploadClothing": "The little things matter.\nCapture them now, find them later.",
+  "memoryTutorialFreePhotoLibraryUploadClothing": "You’ve saved the moments—now sort the memories.\nOne tap brings each piece into their story.",
+  "memoryTutorialFreeEditCameraDeclutterItems": "They’re growing.\nSo are the stories behind what they wore.",
+  "memoryTutorialFreeCreateOutfitCreateOutfitProcess": "One outfit. One day. One memory.\nSnap it. Note it. Feel it again tomorrow.",
+  "memoryTutorialPaidFilterFindInCloset": "Life moves fast.\nTheir closet keeps up.\nFind what you need—right when you need it.",
+  "memoryTutorialPaidCustomizeViewAllItems": "Your closet, your way.\nZoom in. Sort by love.\nOne tap brings it all back.",
+  "memoryTutorialPaidMultiClosetCreateCapsule": "Some closets hold the past.\nSome, the present.\nAll of them—pieces of your story.",
+  "memoryTutorialPaidCalendarTrackFirstExperiences": "What you wore.How it felt.\nIt’s all here—ready to remember, ready to reuse.",
+  "memoryTutorialPaidUsageAnalyticsCostPerWear": "They outgrew the clothes—\nbut not the moments you lived in them.\nSee what mattered. Feel it again.",
+  "memoryTutorialClosetUploaded": "Use what they have.\nBuild the streak.\nUnlock more—just by choosing less.",
+  "memoryScenarioTutorial": "You thought you’d remember it all.\nNow you can.\n\nTheir story lives on—one outfit at a time."
 }
