--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -538,16 +538,33 @@
   "tutorialPaidUsageAnalyticsSellUnworn": "出售不再穿的衣物",
   "errorSavingTutorialProgress": "保存教程进度时出错",
   "iAmReady": "我准备好了",
-  "tutorialFreeUploadCameraTitle": "使用相机上传衣物",
-  "tutorialFreeEditCameraTitle": "编辑你拍摄的物品",
-  "tutorialFreeCreateOutfitTitle": "搭配你的穿搭",
-  "tutorialPaidFilterTitle": "解锁高级筛选功能",
-  "tutorialPaidCustomizeTitle": "自定义你的体验",
-  "tutorialPaidMultiClosetTitle": "切换多个衣橱",
-  "tutorialPaidCalendarTitle": "使用日历规划穿搭",
-  "tutorialPaidUsageAnalyticsTitle": "追踪使用情况和进度",
+  "tutorialFreeUploadCameraTitle": "拍下衣物，开启故事篇章",
+  "tutorialFreeEditCameraTitle": "细修衣物，丰富穿搭记忆",
+  "tutorialFreeCreateOutfitTitle": "旧衣新搭，织出风格新章",
+  "tutorialPaidFilterTitle": "精准筛选，快速找回那件心头好",
+  "tutorialPaidCustomizeTitle": "自定义排列，呈现你的风格秩序",
+  "tutorialPaidMultiClosetTitle": "切换衣橱，自由穿梭不同章节",
+  "tutorialPaidCalendarTitle": "穿搭故事，日日串联",
+  "tutorialPaidUsageAnalyticsTitle": "追踪风格足迹，见证日常蜕变",
   "tutorialHubTitle": "教程",
   "alwaysAvailableFeatures": "始终可用的功能教程",
   "premiumFeatureTutorials": "高级功能教程",
-  "scenarioTutorials": "场景教程"
+  "scenarioTutorials": "场景教程",
+
+
+  "tutorialFreePhotoLibraryTitle": "从相册上传",
+  "tutorialClosetUploadedTitle": "衣橱上传教程",
+  "tutorialScenarioTitle": "情境教程",
+
+  "memoryTutorialFreeUploadCameraUploadClothing": "细节很重要。\n现在拍下，以后好找。",
+  "memoryTutorialFreePhotoLibraryUploadClothing": "你已经留下了这些瞬间——现在是时候整理记忆了。\n轻轻一点，每件衣物都能找到自己的故事。",
+  "memoryTutorialFreeEditCameraDeclutterItems": "他们在成长，\n那些穿过的衣物背后，也有成长的故事。",
+  "memoryTutorialFreeCreateOutfitCreateOutfitProcess": "一套穿搭，一天回忆。\n拍下来，写下来，明天再感受一次。",
+  "memoryTutorialPaidFilterFindInCloset": "生活节奏飞快，\n他们的衣橱也能跟上。\n需要什么，随时找到。",
+  "memoryTutorialPaidCustomizeViewAllItems": "你的衣橱，由你掌控。\n放大查看，按喜爱排序。\n一点，就唤起所有回忆。",
+  "memoryTutorialPaidMultiClosetCreateCapsule": "有的衣橱收藏着过去，\n有的属于现在。\n它们都记录着你的故事。",
+  "memoryTutorialPaidCalendarTrackFirstExperiences": "你穿了什么，\n感觉如何，\n都在这里——随时回忆，随时重用。",
+  "memoryTutorialPaidUsageAnalyticsCostPerWear": "他们长大了，衣服穿不了了——\n但那些你们共同经历的时刻还在。\n\n顺着线索找回去，\n看看哪些值得纪念，重新感受那一刻。",
+  "memoryTutorialClosetUploaded": "用他们已有的，\n建立记录连续天数，\n少选一点，就能解锁更多。",
+  "memoryScenarioTutorial": "你以为自己会记得所有细节，\n现在真的可以了。\n\n他们的故事会延续——一套穿搭一个回忆。"
 }
