Personalized onboarding for trial

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -244,6 +244,8 @@
   "infoHubUrl": "https://inky-twill-3ab.notion.site/8bca4fd6945f4f808a32cbb5ad28400c",
   "privacyTermsUrl": "https://www.notion.so/Privacy-Policy-9f21c7664efe4b03a8965252495dc1a6",
   "termsAndConditionsUrl": "https://www.notion.so/Service-Term-1a1b8f68ebba48158c0f42e19a135c6e",
+  "streakBenefitsUrl": "https://www.notion.so/Pricing-0b17492513594b7b8975ec686eac1adf?pvs=4#cf77b531351848ed9be7ef80e95d6c2a",
+  "streakBenefitsTitle": "Your Streak, Your Style, Your Rewards",
   "unableToRetrieveUserId": "Unable to retrieve user ID. Please sign in again.",
   "failedToSubmitScore": "Failed to submit score.",
   "recommendClosetConscious": "How likely are you to recommend Closet Conscious to a friend?",
@@ -510,7 +512,7 @@
   "viewPendingUpload": "View Pending Upload",
   "personalStyle": "Rediscover My Style",
   "lifeChange": "Start a New Chapter",
-  "parentMemories": "Preserve their Little Moments",
+  "parentMemories": "Create Memory Closet",
   "whyAreYouHereToday": "Why are you here today?",
   "tailorExperience": "We’ll tailor your Closet Conscious experience based on what matters to you most right now.\n\nNot sure? Pick what feels right — you can always update it later.",
   "photoAccessDialogTitle": "Give Full Access?",
@@ -565,5 +567,25 @@
   "memoryTutorialPaidCalendarTrackFirstExperiences": "What you wore.How it felt.\nIt’s all here—ready to remember, ready to reuse.",
   "memoryTutorialPaidUsageAnalyticsCostPerWear": "They outgrew the clothes—\nbut not the moments you lived in them.\nSee what mattered. Feel it again.",
   "memoryTutorialClosetUploaded": "Use what they have.\nBuild the streak.\nUnlock more—just by choosing less.",
-  "memoryScenarioTutorial": "You thought you’d remember it all.\nNow you can.\n\nTheir story lives on—one outfit at a time."
+  "memoryScenarioTutorial": "You thought you’d remember it all.\nNow you can.\n\nTheir story lives on—one outfit at a time.",
+  "memoryTrialFilter": "Narrow your closet by name, item type to create your memory quickly.",
+  "memoryTrialCustomize": "Arrange your items like memory shelves—what mattered most stays visible.",
+  "memoryTrialClosets": "Group life chapters into closets—each with a story of its own.",
+  "memoryTrialOutfits": "Create outfits from pieces that carry your favorite memories.",
+  "memoryTrialCalendar": "Look back by date—see the outfits that shaped your seasons.",
+  "memoryTrialInsights": "See which items showed up in your story most—by use, by love, by time.",
+
+  "personalStyleTrialFilter": "Narrow your closet by name, item type to define your unique look.",
+  "personalStyleTrialCustomize": "Reorganize your layout to reflect what feels like you right now.",
+  "personalStyleTrialClosets": "Make themed closets that mirror your personal aesthetic.",
+  "personalStyleTrialOutfits": "Mix and match across days to discover your evolving style.",
+  "personalStyleTrialCalendar": "Watch your style change over time, one day at a time.",
+  "personalStyleTrialInsights": "Reveal your most-used items, favorite outfits, and style patterns.",
+
+  "lifeChangeTrialFilter": "Quickly find what suits your new routines, roles, and realities.",
+  "lifeChangeTrialCustomize": "Update your closet layout to fit what matters today.",
+  "lifeChangeTrialClosets": "Create closets for transitions—travel, work, motherhood, or pause.",
+  "lifeChangeTrialOutfits": "Build outfits that support your day-to-day changes.",
+  "lifeChangeTrialCalendar": "Track your outfits during life shifts. See what worked and when.",
+  "lifeChangeTrialInsights": "Understand what truly served you during change—by use and by season."
 }
